index page updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    it is the first github class.we learn alot of new things in this class.seniors teach like profissinals.
+    it is the first github class.we learn alot of new things in this class.
 </body>
 </html>
