sevice page updated

--- a/service.html
+++ b/service.html
@@ -54,6 +54,7 @@ Copy code
     <div class="container">
         <div class="service">
             <h2>Service One</h2>
+           <p> hi hello</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum lacus a risus bibendum, ac egestas erat sollicitudin.</p>
         </div>
 
