--- a/about.html
+++ b/about.html
@@ -4,9 +4,8 @@
 <title>Page Title</title>
 </head>
 <body>
-
+<p> hi hello</p>
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-
 </body>
 </html>
