--- a/profile.html
+++ b/profile.html
@@ -12,11 +12,11 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            color: #333;
+            color: #2d8664;
         }
         header {
-            background: #333;
-            color: #fff;
+            background: #0a6d70;
+            color: #5f0c68;
             padding: 1rem 0;
             text-align: center;
         }
@@ -26,7 +26,7 @@
             text-align: center;
         }
         nav a {
-            color: #fff;
+            color: #d8cd4f;
             padding: 0.5rem 1rem;
             text-decoration: none;
         }
@@ -36,9 +36,9 @@
             margin: 2rem;
         }
         .profile-card {
-            border: 1px solid #ddd;
+            border: 1px solid #48ab12;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(64, 11, 78, 0.1);
             padding: 2rem;
             max-width: 600px;
             width: 100%;
